# elle-rs

./: Cargo.toml  Embed.toml  rust-toolchain.toml
.cargo/: config.toml
crates/elle-config/: Cargo.toml
crates/elle-config/src/: lib.rs  lut.rs  profile.rs
crates/elle-control/: Cargo.toml
crates/elle-control/src/: arming.rs  commands.rs  lib.rs  mixing.rs  pid.rs  throttle.rs
crates/elle-control/src/mixing/: elevons.rs  yaw.rs
crates/elle-eagle/: Cargo.toml
crates/elle-eagle/src/: main.rs
crates/elle-error/: Cargo.toml
crates/elle-error/src/: lib.rs
crates/elle-hardware/: Cargo.toml
crates/elle-hardware/src/: imu.rs  lib.rs  pwm.rs  sbus.rs  sequential_flash_manager.rs
crates/elle-system/: Cargo.toml
crates/elle-system/src/: lib.rs  rtt_control.rs  system.rs
src/: config.rs  control.rs  error.rs  hardware.rs  lib.rs  rtt_control.rs  system.rs
src/config/: lut.rs  profile.rs
src/control/: arming.rs  commands.rs  mixing.rs  pid.rs  throttle.rs
src/control/mixing/: elevons.rs  yaw.rs
src/hardware/: flash_constants.rs  flash_manager.rs  imu.rs  led.rs  pwm.rs  sbus.rs  sequential_flash_manager.rs
