[package]
name = "elle"
version = "0.1.0"
edition = "2024"

[dependencies]
sbus-rs = { version = "0.1.3" }
embassy-executor = { version = "0.8.0", git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0",     git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "*",     git = "https://github.com/embassy-rs/embassy.git" }
embassy-rp = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa"] }
embassy-futures = { version = "0.1.1", git = "https://github.com/embassy-rs/embassy.git" }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
libm = "0.2.15"
mint = "0.5.9"
bno055 = "0.4.0"
static_cell = "2.1.1"
free-flight-stabilization = { git = "https://github.com/AeroRust/free-flight-stabilization.git", branch = "fix/no_std-support-for-f32-f64", default-features = false }

[features]
default = ["mixing"]
mixing = []  # Enable flight control mixing mode

[profile.release]
debug = 2
lto = true
codegen-units = 1

[lib]
test = false
bench = false

[[bin]]
name = "eagle"
test = false
bench = false
