[package]
name = "elle"
version = "0.1.0"
edition = "2024"

[dependencies]
sbus-rs = { version = "0.1.3" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }
defmt = "1.0.1"
defmt-rtt = { version = "1.0.0", optional = true }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
libm = "0.2.15"
mint = "0.5.9"
bno055 = "0.4.0"
static_cell = "2.1.1"
free-flight-stabilization = { git = "https://github.com/AeroRust/free-flight-stabilization.git", branch = "fix/no_std-support-for-f32-f64", default-features = false }
smart-leds = "0.4.0"
rtt-target = { version = "0.6.1", optional = true, features = ["defmt"] }

[features]
default = ["imu-save-calibration", "defmt-logging"]
legacy-ctrl = []  # Enable legacy (non-mixed) control path
imu-save-calibration = []  # Enable saving IMU calibration to flash
performance-monitoring = []  # Enable detailed performance monitoring and telemetry
defmt-logging = ["defmt-rtt"]  # Use defmt-rtt for simple logging (mutually exclusive with rtt-control)
rtt-control = ["rtt-target"]  # Use rtt-target for interactive RTT control (mutually exclusive with defmt-logging)
error-strings = []  # Include human-readable error descriptions (for development only)

[profile.release]
debug = 2
lto = true
codegen-units = 1

[lib]
test = false
bench = false

[[bin]]
name = "eagle"
test = false
bench = false
