[workspace]
resolver = "2"
members = [
    "crates/elle-error",
    "crates/elle-config",
    "crates/elle-hardware",
    "crates/elle-control",
    "crates/elle-system",
    "crates/elle-eagle",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal crates
elle-error = { path = "crates/elle-error" }
elle-config = { path = "crates/elle-config" }
elle-hardware = { path = "crates/elle-hardware" }
elle-control = { path = "crates/elle-control" }
elle-system = { path = "crates/elle-system" }

# External dependencies - Embassy ecosystem
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-rp = { version = "0.8.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }

# External dependencies - Hardware drivers
bno055 = "0.4.0"
sbus-rs = "0.1.3"
smart-leds = "0.4.0"

# External dependencies - Control algorithms
free-flight-stabilization = { git = "https://github.com/AeroRust/free-flight-stabilization.git", branch = "fix/no_std-support-for-f32-f64", default-features = false }

# External dependencies - System libraries
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
libm = "0.2.15"
mint = "0.5.9"
static_cell = "2.1.1"
rtt-target = { version = "0.6.1", features = ["defmt"] }
thiserror = { version = "2.0.17", default-features = false }
sequential-storage = { version = "5.0.*", default-features = false }

[profile.release]
debug = 2
lto = true
codegen-units = 1
