[package]
name = "elle-control"
version.workspace = true
edition.workspace = true

[dependencies]
elle-error = { workspace = true }
elle-config = { workspace = true }

free-flight-stabilization = { workspace = true }
defmt = { workspace = true }
libm = { workspace = true }

[features]
legacy-ctrl = []  # Enable legacy (non-mixed) control path

[lib]
test = false
bench = false
